[package]
name = "rust_shaders"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.31.0", features = ["serde"] }
eframe = { version = "0.31.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
mongodb = { version = "3.2.0", features = ["sync"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = { version = "0.15.0" }